--- a/detail.html
+++ b/detail.html
@@ -17,11 +17,14 @@
     <!-- Custom styles for this template -->
     <link href="css/offcanvas.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <!-- Font awesome -->
+    <link rel="stylesheet" href="css/fonts/cssFonts/fontawesome.css">
+
   </head>
 
   <body style="background-color: #F5F5F5;">
 
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #F5F5F5;">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top-details" style="background-color: #F5F5F5;">
       <a class="navbar-brand" style="color: #524B52;" href="#">KMUTT</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -60,51 +63,53 @@
           <h3>ทุนเพชรพระจอมเกล้าปริญญาตรี</h3>
           <div class="row">
             <div class="col-8 col-lg-8">
-              <p>Sponsor : มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี</p>
+              <p><strong>Sponsor</strong> : มหาวิทยาลัยเทคโนโลยีพระจอมเกล้าธนบุรี</p>
               <p><strong>Posted</strong> : 1 ตุลาคม 2560</p>
+              <p style="color: #FF8C3F;"><strong>จำนวนเงิน</strong>&nbsp;34,000 บาท</p>
             </div>
             <div class="col-4 col-lg-4">
-              <p>ระยะเวลาการขอรับทุน</p>
+              <p style="color: #FF8C3F;"><strong>ระยะเวลาการขอรับทุน</strong></p>
               <p>1 ต.ค. - 2 พ.ย. 2560</p>
             </div>
           </div>
-          <div class="jumbotron">
-            <h1>Hello, world!</h1>
-            <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
+          <div class="jumbotron2">
+            <h5>รายละเอียด</h5>
+            <p>      ทุุนสนับสนุนนักศึกษาที่มีความสามารถ ทั้งด้านวิชาการดีเด่น และความสามารถเฉพาะด้าน ได้แก่ ด้านความคิดสร้างสรรค์
+และนวัตกรรม ด้านกีฬา ด้านศิปลวัฒนธรรม และด้านผู้นำ โดยให้การสนับสนุนค่าเล่าเรียน ค่าครองชีพ รายได้เดือนละ 4,000 บาท/เดือน และค่าอุปกรณ์แรกเข้าเหมาจ่าย 30,000 บาท โดยจะให้การสนับสนุนตามระยะเวลาการศึกษาที่ระบุไว้ในหลักสูตร และเงื่อนไขที่กำหนด</p>
           </div>
-          <div class="jumbotron">
-            <h1>Hello, world!</h1>
-            <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
+          <div class="jumbotron2">
+            <h5>คุณสมบัติผู้ขอรับทุน</h5>
+            <p>1. เป็นผู้มีมีผลการเรียน หรือ
+2. มีความสามารถด้านกีฬา หรือ
+3. มีความสามารถด้านศิลปะวัฒนธรรม หรือ
+4. มีความสามารถด้านผู้นำ หรือ
+5. มีความด้านนวัตกรรมและความคิดสร้างสรรค์</p>
           </div>
-          <div class="jumbotron">
-            <h1>Hello, world!</h1>
-            <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
+          <div class="jumbotron2">
+            <h5>เอกสารประกอบการสมัคร</h5>
+            <p>1. ใบสมัครติดรูปถ่ายขนาด 1 นิ้ว 1 รูป (ใบสมัครพิมพ์ออกจากระบบรับสมัคร)
+**กรุณาระบุด้านความสามารถพิเศษที่ต้องการสมัคร มุมบนขวามือของใบสมัคร**
+2. สำเนาผลการเรียน 5 ภาคการศึกษา
+3. สำเนาบัตรประชาชน
+4. สำเนาทะเบียนบ้าน
+5. สำเนาแฟ้มสะสมผลงาน
+**กรณีแฟ้มสะสมผลงานชำรุดหรือสูญหาย ไม่รับผิดชอบไม่ว่ากรณีใดๆทั้งสิ้น**</p>
           </div>
-          <div class="jumbotron">
-            <h1>Hello, world!</h1>
-            <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
+          <div class="jumbotron2">
+            <h5>ขั้นตอนการสมัคร</h5>
+            <p>กรณีสมัครด้วยตนเอง
+1. สมัครขอรับทุนการศึกษาที่เว็บไซต์ admission.kmutt.ac.th กรอกรายละเอียดและแนบหลักฐานให้ครบถ้วน
+2. ส่งหลักฐานการสมัครที่ สำนักงานคัดเลือกและสรรหานักศึกษา อาคารสำนักงานอธิการบดี ชั้น 2
+3. ประกาศรายชื่อผู้มีสิทธิได้รับทุนที่ admission.kmutt.ac.th
+
+กรณีเสนอชื่อ
+1. คณะกรรมการและภาควิชาเสนอชื่อและหลักฐานประกอบการพิจารณาที่ กลุ่มงานช่วยเหลือทางการเงินแก่นักศึกษา โดยผู้สมัครต้องมีผลงานตามเงื่อนไขของทุน
+2. ประกาศรายชื่อผู้มีสิทธิรับทุนที่ admission.kmutt.ac.th</p>
           </div>
           <div class="row">
             <div class="col-6 col-lg-4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="col-6 col-lg-4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="col-6 col-lg-4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-            </div><!--/span-->
-            <div class="col-6 col-lg-4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-            </div><!--/span-->
+              <img class="detailsImg" src="images/poster.jpg">
+            </div>
             <div class="col-6 col-lg-4">
               <h2>Heading</h2>
               <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
@@ -121,16 +126,14 @@
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
           <p class=""><a href="#">กลับสู่หน้าค้นหา</a></p>
           <div class="list-group">
-            <a href="#" class="list-group-item active">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
-            <a href="#" class="list-group-item">Link</a>
+            <button class="buttonLists"><span>Hover </span></button>
+            <button class="buttonLists"><span>Hover </span></button>
+            <button class="buttonLists"><span>Hover </span></button>
+            <a href="#" class="list-group-item2 active">Link</a>
+            <a href="#" class="list-group-item2">Link</a>
+            <a href="#" class="list-group-item2">Link</a>
+            <a href="#" class="list-group-item2">Link</a>
+            <a href="#" class="list-group-item2">Link</a>
           </div>
         </div><!--/span-->
       </div><!--/row-->
@@ -141,8 +144,9 @@
 
     <!-- FOOTER -->
     <footer class="container">
-      <p class="float-right"><a href="#">Back to top</a></p>
+      <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
       <p>&copy; Company 2017</p>
+      <i class="fa fa-angle-up" aria-hidden="true"></i>
     </footer>
 
 
@@ -154,5 +158,20 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/offcanvas.js"></script>
+    <!-- Go to top -->
+    <script type="text/javascript">
+      window.onscroll = function() {scrollFunction()};
+      function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+              document.getElementById("myBtn").style.display = "block";}
+        else {
+              document.getElementById("myBtn").style.display = "none";}
+      }
+
+      // When the user clicks on the button, scroll to the top of the document
+      function topFunction() {
+          document.body.scrollTop = 0; // For Safari
+          document.documentElement.scrollTop = 0;} // For Chrome, Firefox, IE and Opera
+    </script>
   </body>
 </html>
