--- a/index.html
+++ b/index.html
@@ -54,11 +54,6 @@
             </div>
 
           </ul>
-
-<!--           <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form> -->
         </div>
       </nav>
 
@@ -233,7 +228,7 @@
             </address>
           </div>
           <div class="col-md-6 order-md-1">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1516.5690488986372!2d100.49503502099573!3d13.651687915314294!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf656e94ff13324ad!2sKing+Mongkut&#39;s+University+of+Technology+Thonburi!5e0!3m2!1sen!2sth!4v1514312767881" width="400" height="300" frameborder="0" style="border:0; border-radius: 0.625rem;" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3877.097290879398!2d100.49282151398339!3d13.651845390412218!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2a251bb6b0cf1%3A0xf656e94ff13324ad!2sKing+Mongkut&#39;s+University+of+Technology+Thonburi!5e0!3m2!1sen!2sth!4v1514469635144" width="500" height="375" frameborder="0" style="border:0; border-radius: 0.625rem;" allowfullscreen></iframe>
           </div>
         </div>
       </div>
@@ -246,9 +241,7 @@
 
 
       <!-- FOOTER -->
-      <footer class="container">
-        <!-- <p class="float-right"><a href="#">back to top</a></p> -->
-        
+      <footer class="container"
         <p class="float-right">Have a feedback? <a href="#" class="badge badge-light">Let us know</a></p>
       </footer>
 
