--- a/2cards.html
+++ b/2cards.html
@@ -66,66 +66,66 @@
       <div class="row">
         <nav class="col-sm-3 col-md-2 d-none d-sm-block">
           <h5>เงื่อนไขพิเศษ</h5>
-            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
               <span class="custom-control-indicator"></span>
               <span class="custom-control-description">เป็นนักศึกษาต่างชาติ</span>
             </label>
-            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
               <span class="custom-control-indicator"></span>
               <span class="custom-control-description">รายได้ครอบครัวน้อยกว่า 200,000 บาทต่อปี</span>
             </label>
-            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
               <span class="custom-control-indicator"></span>
               <span class="custom-control-description">เคยได้รับรางวัลในระดับ เขต / ประเทศ / นานาชาติ</span>
             </label>
-            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
               <span class="custom-control-indicator"></span>
               <span class="custom-control-description">ต้องการทุนสนับสนุนงานวิจัย</span>
             </label>
           <hr class="featurette-divider">
           <h5>ความสามารถพิเศษของผู้รับทุน</h5>
-            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
               <span class="custom-control-indicator"></span>
               <span class="custom-control-description">มีผลการเรียนดี</span>
             </label>
-            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
               <span class="custom-control-indicator"></span>
               <span class="custom-control-description">มีความสามารถด้านกีฬา</span>
             </label>
-            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
               <span class="custom-control-indicator"></span>
               <span class="custom-control-description">มีความสามารถด้านผู้นำ</span>
             </label>
-            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
               <span class="custom-control-indicator"></span>
               <span class="custom-control-description">มีความสามารถด้านศิลปวัฒนธรรม</span>
             </label>
-            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
               <span class="custom-control-indicator"></span>
               <span class="custom-control-description">มีความสามารถด้านนวัตกรรม</span>
             </label>
           <hr class="featurette-divider">
           <h5>ลักษณะทุน</h5>
-            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
               <span class="custom-control-indicator"></span>
               <span class="custom-control-description">ทุนกู้ยืม</span>
             </label>
-            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
               <span class="custom-control-indicator"></span>
               <span class="custom-control-description">ทุนจ้างงาน</span>
             </label>
-            <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+            <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
               <input type="checkbox" class="custom-control-input">
               <span class="custom-control-indicator"></span>
               <span class="custom-control-description">ทุนให้เปล่า</span>
@@ -136,8 +136,8 @@
 
           <section class="row text-center placeholders">
             <div class="col-md-4 col-sm-3 placeholder">
-              <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail">
-              <div class="card">
+              <!-- <img src="data:image/gif;base64,R0lGODlhAQABAIABAAJ12AAAACwAAAAAAQABAAACAkQBADs=" width="200" height="200" class="img-fluid rounded-circle" alt="Generic placeholder thumbnail"> -->
+<div class="card">
   <!-- <div class="topcard"></div> -->
   <div class="topcard">
     <p>Fleece Marigold</p>
