--- a/index.html
+++ b/index.html
@@ -19,9 +19,16 @@
     <link href="css/custom.css" rel="stylesheet">
 
   </head>
+
   <body style="background-color: #F5F5F5;">
 
     <header>
+
+<div id="headerSlideContainer">
+  <div id="headerSlideContent">
+    Header content goes here!
+  </div>
+</div>
       <nav class="navbar-expand-md navbar-dark fixed-top-index" style="background-color: #F5F5F5;">
         <a class="navbar-brand" style="position: absolute;top:-3rem;left:9rem;" href="#"><img class="logo" src="images/logo2.png"></a> <!--Don't forget to hide logo responsive & fixed navbar-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -182,7 +189,7 @@
                 </select>
 
 
-              <label class="custom-control custom-checkbox mb-2 mr-sm-2 mb-sm-0">
+              <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
                 <input type="checkbox" class="custom-control-input">
                 <span class="custom-control-indicator"></span>
                 <span class="custom-control-description">สนใจรับจดหมายข่าว</span>
@@ -241,7 +248,7 @@
 
 
       <!-- FOOTER -->
-      <footer class="container"
+      <footer class="container">
         <p class="float-right">Have a feedback? <a href="#" class="badge badge-light">Let us know</a></p>
       </footer>
 
