เหลือหลักๆ ของ cards

--- a/detail.html
+++ b/detail.html
@@ -126,14 +126,30 @@
         <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
           <p class=""><a href="#">กลับสู่หน้าค้นหา</a></p>
           <div class="list-group">
-            <button class="buttonLists"><span>Hover </span></button>
-            <button class="buttonLists"><span>Hover </span></button>
-            <button class="buttonLists"><span>Hover </span></button>
-            <a href="#" class="list-group-item2 active">Link</a>
-            <a href="#" class="list-group-item2">Link</a>
-            <a href="#" class="list-group-item2">Link</a>
-            <a href="#" class="list-group-item2">Link</a>
-            <a href="#" class="list-group-item2">Link</a>
+            <p>ทุนที่ลักษณะคล้ายกัน</p>
+            <button class="buttonLists"><span>ทุนการศึกษาเอสโซ่ </span></button>
+            <button class="buttonLists"><span>ทุนบุณรอด </span></button>
+            <div class="boxs">
+              <iframe src="https://www.youtube.com/embed/XGSy3_Czz8k"></iframe>
+              <div class="boxscontainer">
+                <p>ภาพความทรงจำที่น่าประทับใจของ
+นักศึกษาทุนเพชรพระจอมเกล้า</p> 
+              </div>
+            </div>
+            <div class="boxs">
+              <iframe src="https://www.youtube.com/embed/XGSy3_Czz8k"></iframe>
+              <div class="boxscontainer">
+                <p>ภาพความทรงจำที่น่าประทับใจของ
+นักศึกษาทุนเพชรพระจอมเกล้า</p> 
+              </div>
+            </div>
+            <div class="boxs">
+              <iframe src="https://www.youtube.com/embed/XGSy3_Czz8k"></iframe>
+              <div class="boxscontainer">
+                <p>ภาพความทรงจำที่น่าประทับใจของ
+นักศึกษาทุนเพชรพระจอมเกล้า</p> 
+              </div>
+            </div>
           </div>
         </div><!--/span-->
       </div><!--/row-->
@@ -143,10 +159,9 @@
     </main><!--/.container-->
 
     <!-- FOOTER -->
-    <footer class="container">
+    <footer class="foot">
       <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
-      <p>&copy; Company 2017</p>
-      <i class="fa fa-angle-up" aria-hidden="true"></i>
+      <p class="float-right" style="color: #ffffff">Have a feedback? <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a></p>
     </footer>
 
 
