--- a/index.html
+++ b/index.html
@@ -17,18 +17,13 @@
     <!-- Custom styles for this template -->
     <link href="css/carousel.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
 
   <body style="background-color: #F5F5F5;">
-
     <header>
-
-<div id="headerSlideContainer">
-  <div id="headerSlideContent">
-    Header content goes here!
-  </div>
-</div>
       <nav class="navbar-expand-md navbar-dark fixed-top-index" style="background-color: #F5F5F5;">
         <a class="navbar-brand" style="position: absolute;top:-3rem;left:9rem;" href="#"><img class="logo" src="images/logo2.png"></a> <!--Don't forget to hide logo responsive & fixed navbar-->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,6 +63,7 @@
 
 <!-- Home
   ====================================================-->
+    <section>
       <div id="Home" class="section" style="position: relative;bottom:3rem;">
         <div id="myCarousel" data-ride="carousel">
           <div class="carousel-inner">
@@ -112,10 +108,11 @@
           </div><!-- /.row -->
         </div>
       </div>
-
+    </section>
         <!-- START THE FEATURETTES -->
 
         <hr class="featurette-divider">
+    <section>
       <div id="Search" class="container section">
         <div class="row featurette">
       <!-- left space -->
@@ -144,12 +141,12 @@
               <form class="was-validated">
                 <label class="custom-control2 custom-checkbox">
                   <input type="checkbox" class="custom-control-input" required>
-                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-indicator-2"></span>
                   <span class="custom-control-description">กำลังศึกษา</span>
                 </label>
                 <label class="custom-control2 custom-checkbox">
                   <input type="checkbox" class="custom-control-input" required>
-                  <span class="custom-control-indicator"></span>
+                  <span class="custom-control-indicator-2"></span>
                   <span class="custom-control-description">สำเร็จการศึกษา</span>
                 </label>
               </form>
@@ -191,7 +188,7 @@
 
               <label class="custom-control2 custom-checkbox mb-2 mr-sm-2 mb-sm-0">
                 <input type="checkbox" class="custom-control-input">
-                <span class="custom-control-indicator"></span>
+                <span class="custom-control-indicator-2"></span>
                 <span class="custom-control-description">สนใจรับจดหมายข่าว</span>
               </label>
 
@@ -215,8 +212,10 @@
           </div>
         </div>
       </div>
+    </section>
 
         <hr class="featurette-divider">
+    <section>
       <div id="Contact" class="section container marketing">
         <div class="row featurette">
           <div class="col-md-6 order-md-2">
@@ -233,13 +232,16 @@
                     02 470 8107<br>
                     02 470 8098<br>
             </address>
+            <a href="#" class="fa fa-facebook"></a>
+            <a href="#" class="fa fa-twitter"></a>
+            <a href="#" class="fa fa-google"></a>
+            <a href="#" class="fa fa-linkedin"></a>
           </div>
           <div class="col-md-6 order-md-1">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3877.097290879398!2d100.49282151398339!3d13.651845390412218!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e2a251bb6b0cf1%3A0xf656e94ff13324ad!2sKing+Mongkut&#39;s+University+of+Technology+Thonburi!5e0!3m2!1sen!2sth!4v1514469635144" width="500" height="375" frameborder="0" style="border:0; border-radius: 0.625rem;" allowfullscreen></iframe>
           </div>
         </div>
       </div>
-
         <hr class="featurette-divider">
 
         <!-- /END THE FEATURETTES -->
@@ -248,10 +250,10 @@
 
 
       <!-- FOOTER -->
-      <footer class="container">
-        <p class="float-right">Have a feedback? <a href="#" class="badge badge-light">Let us know</a></p>
+      <footer class="foot">
+        <p class="float-right" style="color: #ffffff">Have a feedback? <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a></p>
       </footer>
-
+    </section>
 
 
     <!-- Bootstrap core JavaScript
