เพิ่ม footer หน้า details

--- a/2cards.html
+++ b/2cards.html
@@ -22,14 +22,18 @@
   <body style="background-color: #F5F5F5;">
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top-details" style="background-color: #F5F5F5;">
-        <a class="navbar-brand" style="color: #524B52;" href="#">KMUTT</a>
+        <a class="navbar-brand" style="position: absolute;top:-3rem;left:9rem;" href="#"><img class="logo" src="images/logo2.png"></a> <!--Don't forget to hide logo responsive & fixed navbar-->
+        <!-- <a class="navbar-brand" style="color: #524B52;" href="#">KMUTT</a> -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse form-inline mt-2 mt-md-0" id="navbarCollapse" style="padding-left: 60%">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link2 menu" href="#">ปริญญาตรี<span class="sr-only">(current)</span></a>
+              <a class="nav-link2 menu" href="#">ทั้งหมด</a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link2 menu" href="#">ปริญญาตรี</a>
             </li>
             <li class="nav-item">
               <a class="nav-link2 menu" href="#">ปริญญาโท</a>
