--- a/detail.html
+++ b/detail.html
@@ -17,15 +17,16 @@
     <!-- Custom styles for this template -->
     <link href="css/offcanvas.css" rel="stylesheet">
     <link href="css/custom.css" rel="stylesheet">
-    <!-- Font awesome -->
-    <link rel="stylesheet" href="css/fonts/cssFonts/fontawesome.css">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
 
   <body style="background-color: #F5F5F5;">
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top-details" style="background-color: #F5F5F5;">
-      <a class="navbar-brand" style="color: #524B52;" href="#">KMUTT</a>
+      <a class="navbar-brand" style="position: absolute;top:-3rem;left:9rem;" href="#"><img class="logo" src="images/logo2.png"></a> <!--Don't forget to hide logo responsive & fixed navbar-->
+      <!-- <a class="navbar-brand" style="color: #524B52;" href="#">KMUTT</a> -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -151,6 +152,7 @@
               </div>
             </div>
           </div>
+          <p>คุณศุริษา แสงอรุณ (พี่เมี้ยว)<br>ติดต่อ 02 4708107</p>
         </div><!--/span-->
       </div><!--/row-->
 
@@ -161,7 +163,13 @@
     <!-- FOOTER -->
     <footer class="foot">
       <button onclick="topFunction()" id="myBtn" title="Go to top"></button>
-      <p class="float-right" style="color: #ffffff">Have a feedback? <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a></p>
+      <p class="float-right" style="color: #999D9F">Have a feedback? <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a></p>
+      <div>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-google"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+      </div>
     </footer>
 
 
