--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 
       <!-- FOOTER -->
       <footer class="foot">
-        <p class="float-right" style="color: #ffffff">Have a feedback? <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a></p>
+        <p class="float-right" style="color: #999D9F;">Have a feedback? <a href="#" class="badge2 badge-light2 skip" style="font-size: 1rem;">Let us know</a></p>
       </footer>
     </section>
 
