--- a/2cards.html
+++ b/2cards.html
@@ -19,20 +19,22 @@
     <link href="css/custom.css" rel="stylesheet">
   </head>
 
-  <body style="background-color: #F5F5F5;">
+  <body class="body-cards">
     <header>
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top-details" style="background-color: #F5F5F5;">
-        <a class="navbar-brand" style="position: absolute;top:-3rem;left:9rem;" href="#"><img class="logo" src="images/logo2.png"></a> <!--Don't forget to hide logo responsive & fixed navbar-->
-        <!-- <a class="navbar-brand" style="color: #524B52;" href="#">KMUTT</a> -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-gray fixed-top" id="mainNav">
+      <div class="container">
+        <a class="navbar-brand js-scroll-trigger"  href="#page-top"><img class="logo" style="position: absolute;top:0;" src="images/logo2.png"></a>
+        <p class="logo-caption">Scholarship showroom</p>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse form-inline mt-2 mt-md-0" id="navbarCollapse" style="padding-left: 60%">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
               <a class="nav-link2 menu" href="#">ทั้งหมด</a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link2 menu" href="#">ปริญญาตรี</a>
             </li>
             <li class="nav-item">
@@ -41,29 +43,17 @@
             <li class="nav-item">
               <a class="nav-link2 menu" href="#">ปริญญาเอก</a>
             </li>
-            
-            <div class="dropdown">
-              <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">ภาษาไทย
-              <span class="caret"></span></button>
-
-              <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">HTML</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">CSS</a></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">JavaScript</a></li>
-                <li role="presentation" class="divider"></li>
-                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
-              </ul>
-            </div>
-
+            <li class="dropdown">
+            <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a class="drop-selector" href="#">ภาษาไทย</a></li>
+              <li><a class="drop-selector" href="#">English</a></li>
+            </ul>
+          </li>
           </ul>
-
-<!--           <form class="form-inline mt-2 mt-md-0">
-            <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form> -->
         </div>
-      </nav>
-
+      </div>
+    </nav>
     </header> <!-- #header end -->
 
     <div class="container-fluid">
