--- a/home.html
+++ b/home.html
@@ -28,9 +28,10 @@
   <body id="page-top" style="background-color: #F5F5F5;">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-gray fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger"  href="#page-top"><img class="logo" style="position: absolute;top:-3rem;left:9rem;" src="images/logo2.png"></a>
+        <a class="navbar-brand js-scroll-trigger"  href="#page-top"><img class="logo" style="position: absolute;top:0;" src="images/logo2.png"></a>
+        <p class="logo-caption">Scholarship showroom</p>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -48,11 +49,10 @@
             <li class="dropdown">
             <a href="#" class="dropdown-toggle nav-link2" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">ภาษาไทย <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="#section3">ภาษาไทย</a></li>
-              <li><a href="#section4">English</a></li>
+              <li><a class="drop-selector" href="#">ภาษาไทย</a></li>
+              <li><a class="drop-selector" href="#">English</a></li>
             </ul>
           </li>
-
           </ul>
         </div>
       </div>
@@ -92,7 +92,7 @@
     <hr class="featurette-divider">
 <!-- Section Search
 =================================================================== -->
-    <section id="services" style="padding: 0 0;">
+    <section id="services" style="padding:2% 0; background: url('images/kmutt building.png') bottom center no-repeat; background-size: cover;">
       <div class="container">
         <div class="row featurette">
           <!-- left space -->
