แก้เพิ่มนิดหน่อยฮะ

--- a/2cards.html
+++ b/2cards.html
@@ -257,7 +257,7 @@
             </div>
           </section>
 
-        <div class="table100 ver5 m-b-110">
+        <div class="table100 ver5 m-b-110" style="padding-left: 10px;">
           <div class="table100-head">
             <table>
               <thead>
