--- a/detail.html
+++ b/detail.html
@@ -187,7 +187,7 @@
 
     <!-- FOOTER -->
     <footer class="foot">
-      <div class="row">
+      <div class="container row">
         <div class="col col-lg-2">
           <p class="phone">02-939393</p>
         </div>
